fix: change text alignment from right to left in body styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1527,7 +1527,7 @@ body {
         font-size: 16px;
         line-height: 21px;
         letter-spacing: 0px;
-        text-align: right;
+        text-align: left;
         padding-right: 0;
     }
 
